--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Guias de desarrollo web</h1>
     <h2>ENTREGA DE GUIAS</h2>
     <ul>
-        <li><a href="./GUIASSS/20245160_Guia1/peliculafav.html">Guia 1</a></li>
+        <li><a href="../GUIASSS/20245160_Guia1/peliculafav.html">Guia 1</a></li>
 </body>
 </html>
