aplicarle formato al index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guias de Desarrollo Web</title>
+    <link rel="stylesheet" href="css/indexta.css">
 </head>
 <body>
     <h1>Guias de desarrollo web</h1>
