--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 <body>
     <h1>Guias de desarrollo web</h1>
     <h2>ENTREGA DE GUIAS</h2>
+    <H3>Guía 1</H3>
     <ul>
         <li><a href="20245160_Guia1/estilos_embebidos.html">Ejercicio 1</a></li> 
         <li><a href="20245160_Guia1/ejemplo2.html">Ejercicio 2</a></li>
         <li><a href="20245160_Guia1/paises.html">Ejercicio 3</a></li>
         <li><a href="20245160_Guia1/peliculafav.html">Página web</a></li>
+    </ul>
+    <H3>Guía 2</H3>
+    <ul>
+        <li><a href="20245160_Guia2/pelicula.html">Ejercicio 1</a></li> 
+        <li><a href="20245160_Guia2/tablero.html">Ejercicio 2</a></li>
+        <li><a href="20245160_Guia2/biografia.html">Ejercicio 3</a></li>
+    </ul>
 </body>
 </html>
