--- a/20245160_Guia2/biografia.html
+++ b/20245160_Guia2/biografia.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <section class="inicio">
         <header>
             <h1>Biografia</h1>
             <h2>Alejandra Belén Pérez Sibrián</h2>
@@ -20,6 +21,7 @@
         </nav>
         <br>
         <br>
+        </section>
         <section>
             <article id="infancia">
                 <h3>Mi infancia</h3>
