--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
         <li><a href="20245160_Guia2/tablero.html">Ejercicio 2</a></li>
         <li><a href="20245160_Guia2/biografia.html">Ejercicio 3</a></li>
     </ul>
+    <H3>Guía 3</H3>
+    <ul>
+        <li><a href="20245160_Guia3/oscares.html">Oscares</a></li> 
+        <li><a href="20245160_Guia3/planes.html">Planes</a></li>
+        <li><a href="20245160_Guia3/galeria.html">Galería</a></li>
+        <li><a href="20245160_Guia3/menu_horizontal.html">menu_horizontal</a></li>
+        <li><a href="20245160_Guia3/analisis.html">analisis</a></li>
+    </ul>
 </body>
 </html>
