--- a/index.html
+++ b/index.html
@@ -32,29 +32,29 @@
             <p>Contiene ejercicios para identificar la estructura básica de un documento web, 
                 aplicar reglas de estilo CSS a los elementos HTML usando estilos embebidos y hojas de estilo externas, 
                 utilizar los selectores CSS básicos y las propiedades CSS para la utilización de fuentes y textos.</p>
-            <a href="../20245160_Guia1/estilos_embebidos.html">Ejercicio 1</a>
-            <a href="../20245160_Guia1/ejemplo2.html">Ejercicio 2</a>
-            <a href="../20245160_Guia1/paises.html">Ejercicio 3</a>
-            <a href="../20245160_Guia1/peliculafav.html">Ejercicio 4</a>
+            <a href="20245160_Guia1/estilos_embebidos.html">Ejercicio 1</a>
+            <a href="20245160_Guia1/ejemplo2.html">Ejercicio 2</a>
+            <a href="20245160_Guia1/paises.html">Ejercicio 3</a>
+            <a href="20245160_Guia1/peliculafav.html">Ejercicio 4</a>
             </div>
             <div id="guia2">
             <h3>Guía 2: Selectores CSS avanzados y modelo de caja</h3>
             <p>Contiene ejercicios para utilizar y combinar selectores CSS avanzados, 
                 conocer la utilidad de las pseudo-clases y pseudo-elementos CSS, crear páginas web utilizando el Modelo de Cajas, 
                 identificando las respectivas partes (margin,border, padding y content).</p>
-            <a href="../20245160_Guia2/pelicula.html">Ejercicio 1</a>
-            <a href="../20245160_Guia2/tablero.html">Ejercicio 2</a>
-            <a href="../20245160_Guia2/biografia.html">Ejercicio 3</a>
+            <a href="20245160_Guia2/pelicula.html">Ejercicio 1</a>
+            <a href="20245160_Guia2/tablero.html">Ejercicio 2</a>
+            <a href="20245160_Guia2/biografia.html">Ejercicio 3</a>
             </div>
             <div id="guia3">
             <h3>Guía 3:  Posicionamiento, visualización y maquetación de sitios web</h3>
             <p>Contiene ejercicios para utilizar los diferentes tipos de posicionamiento CSS y diferenciarlos apropiadamente, 
                 uilizar las propiedades CSS relacionada con la visualización de elementos, maquetar sitios web con diseños fijos y fluidos</p>
-            <a href="../20245160_Guia3/oscares.html">Ejercicio 1</a>
-            <a href="../20245160_Guia3/planes.html">Ejercicio 2</a>
-            <a href="../20245160_Guia3/galeria.html">Ejercicio 3</a>
-            <a href="../20245160_Guia3/menu_horizontal.html">Ejercicio 4</a>
-            <a href="../20245160_Guia3/analisis.html">Ejercicio 5</a>
+            <a href="20245160_Guia3/oscares.html">Ejercicio 1</a>
+            <a href="20245160_Guia3/planes.html">Ejercicio 2</a>
+            <a href="20245160_Guia3/galeria.html">Ejercicio 3</a>
+            <a href="20245160_Guia3/menu_horizontal.html">Ejercicio 4</a>
+            <a href="20245160_Guia3/analisis.html">Ejercicio 5</a>
             </div>
             <div id="guia4">
             <h3>Guía 4: Introducción al Responsive Design</h3>
@@ -64,9 +64,9 @@
                 del navegador, utilice los conocimientos adquiridos durante el transcurso de la asignatura para la construcción de
                 páginas web responsivas.
             </p>
-            <a href="../20245160_Guia4/mediaqueries.html">Ejercicio 1</a>
-            <a href="../20245160_Guia4/ejercicio.html">Ejercicio 2</a>
-            <a href="../20245160_Guia4/ejercicio.html">Ejercicio 3</a>
+            <a href="20245160_Guia4/mediaqueries.html">Ejercicio 1</a>
+            <a href="20245160_Guia4/ejercicio.html">Ejercicio 2</a>
+            <a href="20245160_Guia4/ejercicio.html">Ejercicio 3</a>
         </section>
         <section id="FODA">
             <h3>FODA</h3>
