--- a/20245160_Guia4/ejercicio.html
+++ b/20245160_Guia4/ejercicio.html
@@ -65,7 +65,7 @@
                 páginas web responsivas.
             </p>
             <a href="../20245160_Guia4/mediaqueries.html">Ejercicio 1</a>
-            <a href="../20245160_Guia4/ejercicio.html">Ejercicio 2</a>
+            <a href="../20245160_Guia4/index.html">Ejercicio 2</a>
             <a href="../20245160_Guia4/ejercicio.html">Ejercicio 3</a>
         </section>
         <section id="FODA">
