--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
             <a href="20245160_Guia4/index.html">Ejercicio 2</a>
             <a href="20245160_Guia4/ejercicio.html">Ejercicio 3</a>
         </section>
+        <div id="guia5">
+            <h3>Guía 5: Introducción a JavaScript</h3>
+            <p>Contiene ejercicios para adquirir dominio de los elementos sintácticos básicos del lenguaje JavaScript,
+                 ser capaz de generar código HTML desde secuencias de comando de JavaScript, poder crear páginas web utilizando métodos 
+                 básicos de interacción con el usuario, utilizar correctamente estructuras selectivas y repetitivas en JavaScript.
+                </p>
+            <a href="Guia5_20245160/index.html">Index</a>
         <section id="FODA">
             <h3>FODA</h3>
             <p>Fortalezas: He mejorado significativamente mis habilidades de diseño, JS, CSS y HTML.</p>
