arreglos del index

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a href="20245160_Guia4/mediaqueries.html">Ejercicio 1</a>
             <a href="20245160_Guia4/index.html">Ejercicio 2</a>
             <a href="20245160_Guia4/ejercicio.html">Ejercicio 3</a>
-        </section>
+            </div>
         <div id="guia5">
             <h3>Guía 5: Introducción a JavaScript</h3>
             <p>Contiene ejercicios para adquirir dominio de los elementos sintácticos básicos del lenguaje JavaScript,
@@ -75,6 +75,8 @@
                  básicos de interacción con el usuario, utilizar correctamente estructuras selectivas y repetitivas en JavaScript.
                 </p>
             <a href="Guia5_20245160/index.html">Index</a>
+            </div>
+        </section>
         <section id="FODA">
             <h3>FODA</h3>
             <p>Fortalezas: He mejorado significativamente mis habilidades de diseño, JS, CSS y HTML.</p>
